--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,18 @@
-main {
-    margin-top: 80px;
-  }
-  
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-html, body, #root {
+body, html, #root {
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: black;
+}
+
+
+html, body {
+  overflow-x: hidden;
 }
