--- a/frontend/src/Views/Home/Home.css
+++ b/frontend/src/Views/Home/Home.css
@@ -147,3 +147,53 @@
   box-shadow: 0 0 15px 5px var(--glow-blue);
   border-radius: 8px;
 }
+
+.opiniones-container {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem 1rem;
+  flex-wrap: wrap;
+}
+
+.opinion-card {
+  background-color: #222;
+  color: #ccc;
+  width: 500px;
+  height: 300px;
+  border-radius: 2rem;
+  padding: 2rem 1.5rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.opinion-text {
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+}
+
+.opinion-author {
+  font-size: 0.85rem;
+  font-weight: 500;
+  color: #aaa;
+  letter-spacing: 0.5px;
+}
+
+.opinion-section {
+  background: var(--secondary);
+  color: white;
+  padding: 4rem 2rem;
+  text-align: center;
+}
+
+.opinion-section h2 {
+  font-size: 3.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+}
+
+
+
