--- a/frontend/src/Views/IniciarSesion/IniciarSesion.css
+++ b/frontend/src/Views/IniciarSesion/IniciarSesion.css
@@ -144,7 +144,11 @@
       border-radius: 10px;
       margin-bottom: 50%;
     }
-    .botonOlvido
+    .btnOlvido
+    {
+      margin-top: 5%;
+    }
+    .txtOlvido
     {
       color: white;
     }
