--- a/frontend/src/Views/OlvidoPassword/OlvidoPassword.css
+++ b/frontend/src/Views/OlvidoPassword/OlvidoPassword.css
@@ -4,3 +4,15 @@
     margin-bottom: 5%;
     font-weight: bold;
 }
+
+.olvido-button {
+    background-color: #00849c;
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 60%;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+  }
