--- a/frontend/src/Views/DashboardsInd/DashboardsInd.css
+++ b/frontend/src/Views/DashboardsInd/DashboardsInd.css
@@ -15,9 +15,10 @@ body {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    height: 100%;
+    overflow: hidden;
   }
-  
+
   .dropdown {
     background-color: #F9F9F9;
     border: 2px solid #38497E;
@@ -31,20 +32,23 @@ body {
   .user-list {
     list-style: none;
     padding: 0;
+    margin: 0;
     flex-grow: 1;
+    overflow-y: auto;
+    max-height: 100%;
   }
   
-  .user-list li {
-    background-color: #38497E;
-    color: white;
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 6px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-weight: 500;
-  }
+.user-list li {
+  background-color: #38497E;
+  color: white;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: 500;
+}
   
   .delete {
     background-color: #F9F9F9;
@@ -56,6 +60,7 @@ body {
     cursor: pointer;
   }
   
+
   .vista-general {
     background-color: #0D84A2;
     color: white;
@@ -69,7 +74,7 @@ body {
     justify-content: center;
     gap: 8px;
     font-weight: 600;
-    
+    margin-top: 20px;
   }
   
   .arrow {
