--- a/frontend/src/Views/DashboardsInd/DashboardsInd.css
+++ b/frontend/src/Views/DashboardsInd/DashboardsInd.css
@@ -75,6 +75,22 @@ body {
     gap: 8px;
     font-weight: 600;
     margin-top: 20px;
+    position: relative;
+    height: 10%;
+  }
+  
+  .vista-general a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
   }
   
   .arrow {
