--- a/frontend/src/Views/Informacion/Informacion.css
+++ b/frontend/src/Views/Informacion/Informacion.css
@@ -1,11 +1,48 @@
 .fondoInfo
 {
     position: fixed;    
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100vh;      
     object-fit: cover;  
-    z-index: -1;     
+    z-index: -1;       
+}
+.contenidoInfo
+{
+    height: 90vh;
 }
 .tituloInfo
 {
-
+    text-align: center;
+    margin-top: 3%;
+    font-size: 7vh;
+    color: white;
+}
+.sloganInfo
+{
+    color: white;
+    text-align: center ;
+    font-size: 4vh;
+}
+.qInfo
+{
+    color: white;
+    margin-left: 28%;
+    margin-top: 4%;
+    font-size: 3vh;
+}
+.textoInfoL
+{
+    color: white;
+    margin-left: 28%;
+    margin-right: 28%;
+    margin-top: 2%;
+    font-size: 2vh;
+}
+.linea
+{
+    margin-top: 2%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
