--- a/frontend/src/Views/Informacion/Informacion.css
+++ b/frontend/src/Views/Informacion/Informacion.css
@@ -4,13 +4,13 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;      
+    height: 200vh;      
     object-fit: cover;  
     z-index: -1;       
 }
 .contenidoInfo
 {
-    height: 90vh;
+    height: 200vh;
 }
 .tituloInfo
 {
@@ -45,4 +45,94 @@
     margin-top: 2%;
     margin-left: 15%;
     margin-right: 15%;
+}
+.card1
+{
+    background-color: #FFFFFF8F;
+    margin-top: 5%;
+    margin-left: 28%;
+    margin-right: 57%;
+    text-align: center;
+}
+.btnInfo
+{
+    padding: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 3vh;
+    border-radius: 5px;
+    border: none;
+    background-color: #D9D9D9;
+    color: white;
+    margin-top: 6%;
+    margin-bottom: 6%;
+}
+.nameCard1
+{
+    font-size: 3vh;
+}
+.rolI1
+{   
+    color: white;
+    font-size: 4vh;
+}
+
+
+
+
+.card2
+{
+    background-color: #FFFFFF8F;
+    margin-top: 5%;
+    margin-left: 28%;
+    margin-right: 57%;
+    text-align: center;
+}
+
+.nameCard2
+{
+    font-size: 3vh;
+}
+.rol2
+{   
+    color: white;
+    font-size: 4vh;
+}
+
+
+.card3
+{
+    background-color: #FFFFFF8F;
+    margin-top: 5%;
+    margin-left: 28%;
+    margin-right: 57%;
+    text-align: center;
+}
+
+.nameCard3
+{
+    font-size: 3vh;
+}
+.rolI3
+{   
+    color: white;
+    font-size: 4vh;
+}
+.card4
+{
+    background-color: #FFFFFF8F;
+    margin-top: 5%;
+    margin-left: 28%;
+    margin-right: 57%;
+    text-align: center;
+}
+
+.nameCard4
+{
+    font-size: 3vh;
+}
+.rolI4
+{   
+    color: white;
+    font-size: 4vh;
 }
