--- a/frontend/src/Views/Error404/error404.css
+++ b/frontend/src/Views/Error404/error404.css
@@ -1,45 +1,44 @@
 .notfound-container {
-    text-align: center;
-    padding: 5rem;
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    
-  }
-  
-  .notfound-code {
-    font-size: 8rem;
-    color: #ff4c4c;
-    margin-bottom: 0;
-  }
-  
-  .notfound-message {
-    font-size: 2rem;
-    margin-top: 0;
-    color: #333;
-  }
-  
-  .notfound-description {
-    font-size: 1.2rem;
-    color: #666;
-    margin: 1rem 0 2rem;
-  }
-  
-  .notfound-link {
-    padding: 0.75rem 1.5rem;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    transition: background-color 0.3s;
-    margin-left: 35%;
-    margin-right: 35%;
-  }
-  
-  .notfound-link:hover {
-    background-color: #0056b3;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  min-height: 100vh;
+  padding: 2rem;
+}
+
+.notfound-code {
+  font-size: 8rem;
+  color: #ff4c4c;
+  margin-bottom: 0;
+}
+
+.notfound-message {
+  font-size: 2rem;
+  margin-top: 0;
+  color: #333;
+}
+
+.notfound-description {
+  font-size: 1.2rem;
+  color: #666;
+  margin: 1rem 0 2rem;
+}
+
+.notfound-link {
+  padding: 0.75rem 1.5rem;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+.notfound-link:hover {
+  background-color: #0056b3;
+}
