--- a/frontend/src/Componentes/footer/footer.css
+++ b/frontend/src/Componentes/footer/footer.css
@@ -100,7 +100,7 @@
 
 .footer-copyright {
   width: 100%;
-  text-align: center;
+  margin-left: 44.7%;
   margin-top: 40px;
   font-size: 14px;
   color: white;
