--- a/frontend/src/Views/TiempoRealGen/TiempoRealGen.css
+++ b/frontend/src/Views/TiempoRealGen/TiempoRealGen.css
@@ -46,4 +46,10 @@ body {
     object-fit: contain;
     margin-right: 10px;
   }
+  .title-real
+  {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: underline;
+  }
+
   
