--- a/frontend/src/Componentes/CardTiempoReal/CardTiempoReal.css
+++ b/frontend/src/Componentes/CardTiempoReal/CardTiempoReal.css
@@ -11,6 +11,8 @@
     box-sizing: border-box;
 }
 
+
+
 .hora {
     font-size: 2rem;
     font-weight: bold;
@@ -30,9 +32,11 @@
 }
 
 .x {
-    color: black;
-    font-size: 1.3rem;
-    transform: scale(1.2);
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  margin-left: 30px;
 }
 
 .info {
