--- a/frontend/src/Views/DashboardsGen/DashboardsGen.css
+++ b/frontend/src/Views/DashboardsGen/DashboardsGen.css
@@ -1,12 +1,22 @@
+
+.graficos-flex {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+
 .grafico-container {
-  width: 50%;
+  width: 570px;
   height: 400px;
-  margin: 0 auto;
-  padding: 1rem;
+  padding: 0.5rem;
   background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo {
