--- a/frontend/src/Componentes/CardTiempoReal/CardTiempoReal.css
+++ b/frontend/src/Componentes/CardTiempoReal/CardTiempoReal.css
@@ -3,14 +3,36 @@
     color: white;
     display: flex;
     align-items: center;
-    padding: 12px 20px;
+    padding: 12px 15px;
     border-radius: 10px;
     font-family: 'Segoe UI', sans-serif;
     flex: 1;
-    min-width: 100%;
+    min-width: 105%;
     box-sizing: border-box;
 }
 
+.botonReal {
+    background-color: #0D84A2;
+    color: white;
+    border: none;
+    padding: 6px;
+    padding-left: 13px;
+    padding-right: 13px;
+    border-radius: 6px;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    font-weight: 600;
+    margin-left: 3%;
+}
+.botonReal:hover
+{
+    transition: 1.3s;
+    background-color: #38497E;
+}
 
 
 .hora {
