--- a/frontend/src/Views/ConfiguracionView/ConfiguracionView.css
+++ b/frontend/src/Views/ConfiguracionView/ConfiguracionView.css
@@ -8,6 +8,13 @@
     font-family: "Segoe UI", sans-serif;
   }
   
+  .configuracionLista {
+    max-height: 580px;
+    overflow-y: auto;
+    padding-right: 10px;
+    border-radius: 8px;
+  }
+
   .configuracionContainer h2 {
     font-size: 1.8rem;
     margin-bottom: 1.5rem;
