--- a/frontend/src/Views/ConfiguracionView/ConfiguracionView.css
+++ b/frontend/src/Views/ConfiguracionView/ConfiguracionView.css
@@ -97,14 +97,14 @@
   
   /* Inputs */
   .configuracionInput {
-    display: block;
-    width: 100%;
     padding: 0.6rem;
     margin-bottom: 0.8rem;
     border: 1px solid #ddd;
     border-radius: 8px;
     font-size: 0.95rem;
     transition: border 0.2s ease, box-shadow 0.2s ease;
+    margin-left: 22%;
+    
   }
   .configuracionInput:focus {
     border-color: #18b2e7;
@@ -218,7 +218,8 @@
   margin-top: 15px;
   background-color: #2ecc71;
   color: white;
-  width: 100%;
+  margin-left: 35%;
+  width: 25%;
   padding: 10px 0;
   font-size: 16px;
 }
@@ -229,13 +230,14 @@
 
 /* Inputs de agregar nuevo empleado */
 .configuracionInput {
-  width: 100%;
+  width: 50%;
   padding: 8px 12px;
   margin-bottom: 10px;
   border-radius: 6px;
   border: 1px solid #ccc;
   font-size: 14px;
   transition: border-color 0.2s ease;
+  text-align: center;
 }
 
 .configuracionInput:focus {
@@ -305,4 +307,40 @@
   .configuracionBotonAgregar {
     font-size: 14px;
   }
+}
+.textAgregar
+{
+  margin-left: 31%;
+  background-color: lightblue;
+  margin-right: 36%;
+  border-radius: 5px;
+  padding:0.5%;
+  text-align: center;
+  text-decoration: underline;
+  margin-bottom: 520px;
+}
+.textConfig
+{
+  
+  margin-left: 31%;
+  background-color: lightblue;
+  margin-right: 36%;
+  border-radius: 5px;
+  padding:0.5%;
+  text-align: center;
+  text-decoration: underline;
+  margin-bottom: 520px;
+}
+.textTarde
+{
+  margin-left: 40%;
+  font-size: x-large;
+}
+.confiTiempo
+{
+  margin-left: 40.8%;
+  margin-top: 3%;
+  margin-bottom: 2%;
+  padding: 0.4%;
+  font-size: x-large;
 }
